syntax = "proto3";

package mantrae.v1;

import "buf/validate/validate.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

service ServersTransportService {
  rpc GetServersTransport(GetServersTransportRequest) returns (GetServersTransportResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }
  rpc CreateServersTransport(CreateServersTransportRequest) returns (CreateServersTransportResponse);
  rpc UpdateServersTransport(UpdateServersTransportRequest) returns (UpdateServersTransportResponse);
  rpc DeleteServersTransport(DeleteServersTransportRequest) returns (DeleteServersTransportResponse);
  rpc ListServersTransports(ListServersTransportsRequest) returns (ListServersTransportsResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }
}

enum ServersTransportType {
  SERVERS_TRANSPORT_TYPE_UNSPECIFIED = 0;
  SERVERS_TRANSPORT_TYPE_HTTP = 1;
  SERVERS_TRANSPORT_TYPE_TCP = 2;
}

message ServersTransport {
  int64 id = 1;
  int64 profile_id = 2;
  string agent_id = 3;
  string name = 4;
  google.protobuf.Struct config = 5;
  bool enabled = 6;
  ServersTransportType type = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message GetServersTransportRequest {
  int64 id = 1 [(buf.validate.field).int64.gt = 0];
  ServersTransportType type = 2 [(buf.validate.field).enum.defined_only = true];
}
message GetServersTransportResponse {
  ServersTransport servers_transport = 1;
}

message CreateServersTransportRequest {
  int64 profile_id = 1 [(buf.validate.field).int64.gt = 0];
  string agent_id = 2;
  string name = 3 [(buf.validate.field).string.min_len = 1];
  google.protobuf.Struct config = 4;
  bool enabled = 5;
  ServersTransportType type = 6 [(buf.validate.field).enum.defined_only = true];
}
message CreateServersTransportResponse {
  ServersTransport servers_transport = 1;
}

message UpdateServersTransportRequest {
  int64 id = 1 [(buf.validate.field).int64.gt = 0];
  string name = 2 [(buf.validate.field).string.min_len = 1];
  google.protobuf.Struct config = 4;
  bool enabled = 5;
  ServersTransportType type = 6 [(buf.validate.field).enum.defined_only = true];
}
message UpdateServersTransportResponse {
  ServersTransport servers_transport = 1;
}

message DeleteServersTransportRequest {
  int64 id = 1 [(buf.validate.field).int64.gt = 0];
  ServersTransportType type = 2 [(buf.validate.field).enum.defined_only = true];
}
message DeleteServersTransportResponse {}

message ListServersTransportsRequest {
  int64 profile_id = 1 [(buf.validate.field).int64.gt = 0];
  optional string agent_id = 2 [(buf.validate.field).string.min_len = 1];
  optional ServersTransportType type = 3 [(buf.validate.field).enum.defined_only = true];
  optional int64 limit = 4 [(buf.validate.field).cel = {
    id: "limit.valid"
    message: "limit must be either -1 or greater than 0"
    expression: "this == -1 || this > 0"
  }];
  optional int64 offset = 5 [(buf.validate.field).int64.gte = 0];
}
message ListServersTransportsResponse {
  repeated ServersTransport servers_transports = 1;
  int64 total_count = 2;
}
